--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "preview": "astro preview"
   },
   "dependencies": {
+    "@astrojs/react": "^2.1.0",
     "@fontsource/bitter": "^4.5.11",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "yaml": "^2.2.1"
   },
   "devDependencies": {
