--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "reactflow": "^11.6.1"
   },
   "devDependencies": {
     "@astrojs/mdx": "^0.17.0",
