--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/tailwind": "^3.0.1",
     "astro": "^2.0.14",
     "github-slugger": "^2.0.0",
+    "katex": "^0.16.4",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-slug": "^5.1.0",
     "tailwindcss": "^3.2.7"
