--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "preview": "astro preview"
   },
   "dependencies": {
-    "@fontsource/bitter": "^4.5.11"
+    "@fontsource/bitter": "^4.5.11",
+    "yaml": "^2.2.1"
   },
   "devDependencies": {
     "@astrojs/mdx": "^0.17.0",
