--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fontsource/bitter": "^4.5.11",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "htmr": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "yaml": "^2.2.1"
