--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "htmr": "^1.0.2",
+    "localstorage-slim": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "yaml": "^2.2.1"
