--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "localstorage-slim": "^2.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "reactflow": "^11.9.2",
     "yaml": "^2.2.1"
   },
   "devDependencies": {
