--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "@astrojs/react": "^3.0.2",
     "@fontsource/bitter": "^4.5.11",
-    "@fontsource/fira-mono": "^5.0.8",
+    "@fontsource/league-mono": "^5.0.7",
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.8",
     "htmr": "^1.0.2",
